# TradingViewer

./: INSTALL.md  QUICK_START.md  README.md  build.bat  build.sh  build_exe.bat  config.json  install_deps.bat  launcher.py  modern_styles.py  pyproject.toml  run.bat  run_streamlit.bat  run_streamlit.sh  streamlit_app.py  test_setup.bat  worker.py
trading_viewer/: QUICK_START.md  README.md  config.example.json  electron.js  package-lock.json  package.json  preload.js  start-app.sh
trading_viewer/resources/MT4/: TradingViewer.mq4
trading_viewer/resources/MT5/: EAProfile.tpl  TradingViewer.mq5
trading_viewer/scripts/: run-linux.sh  setup.bat
trading_viewer/src/app/: layout.tsx  not-found.tsx  page.tsx
trading_viewer/src/app/accounts/: page.tsx
trading_viewer/src/app/accounts/[id]/: page.tsx
trading_viewer/src/app/reports/: page.tsx
trading_viewer/src/app/settings/: page.tsx
trading_viewer/src/app/trading/: page.tsx
trading_viewer/src/components/: AccountForm.tsx  AccountList.tsx  AnimatedCard.tsx  AnimatedChart.tsx  LiveClock.tsx  NotificationSystem.tsx  ParticleBackground.tsx  ProfessionalHeader.tsx  RealTimeMetrics.tsx  TradingDashboard.tsx  app-sidebar.tsx
trading_viewer/src/lib/: performance.ts
trading_viewer/src/types/: electron.d.ts
