[project]
name = "mt5-portable-launcher"
version = "1.0.0"
description = "MT5 Multi-Account Portable Launcher"
authors = [
    {name = "MT5 Launcher", email = "launcher@mt5.com"}
]
dependencies = [
    "PySide6>=6.6.0",
    "MetaTrader5>=5.0.45",
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "pyinstaller>=6.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "launcher.py",
    "worker.py",
    "config.json",
    "README.md",
    "INSTALL.md"
]

[tool.pyinstaller]
onefile = true
windowed = true 